--- a/web/index.html
+++ b/web/index.html
@@ -34,5 +34,10 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script>
+    window.ENV = {
+        PEXELS_API_KEY: '%PEXELS_API_KEY%'
+    };
+  </script>
 </body>
 </html>
